--- a/CustomMacroFactory/MVVM/Views/uRainbowLine.xaml
+++ b/CustomMacroFactory/MVVM/Views/uRainbowLine.xaml
@@ -2,33 +2,24 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:designtimeviewmodel="clr-namespace:CustomMacroFactory.MVVM.DesignTimeViewModels"
              xmlns:effect="clr-namespace:TrarsUI.Shared.Effects;assembly=TrarsUI.Shared"
+             xmlns:behaviors="clr-namespace:TrarsUI.Shared.Helpers.Behaviors;assembly=TrarsUI.Shared"
              mc:Ignorable="d" 
              d:DesignWidth="640"
              d:DataContext="{d:DesignInstance Type={x:Type designtimeviewmodel:uRainbowLineVM}, IsDesignTimeCreatable=True}">
     <Grid>
         <Rectangle Width="{Binding Width}" Height="{Binding Height}" Fill="{Binding BrushColor}"
                    d:Height="10">
+            <i:Interaction.Behaviors>
+                <behaviors:HorizontalOffsetAnimationBehavior IsEnabled="{Binding IsAnimationEnabled}"/>
+            </i:Interaction.Behaviors>
+            
             <Rectangle.Effect>
                 <effect:TranslationalEffect Threshold="0" HorizontalOffset ="0" VerticalOffset="0"/>
             </Rectangle.Effect>
-            <Rectangle.Triggers>
-                <EventTrigger RoutedEvent="Rectangle.Loaded">
-                    <BeginStoryboard>
-                        <Storyboard>
-                            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="Effect.HorizontalOffset" 
-                                                           Duration="0:0:5" 
-                                                           AutoReverse="False" 
-                                                           RepeatBehavior="Forever">
-                                <LinearDoubleKeyFrame KeyTime="0:0:0" Value="1"/>
-                                <LinearDoubleKeyFrame KeyTime="0:0:5" Value="0"/>
-                            </DoubleAnimationUsingKeyFrames>
-                        </Storyboard>
-                    </BeginStoryboard>
-                </EventTrigger>
-            </Rectangle.Triggers>
         </Rectangle>
     </Grid>
 </UserControl>
